syntax = "proto3";

package pb;

option go_package = "pb";

message Peer {
    uint64 id = 1;
    string name = 2;
    repeated string addresses = 3;
    // 3 - 7 - reserved
    // Timestamps
    int64 createdAt = 8;
    int64 updatedAt = 9;
    int64 deletedAt = 10;
}

message Peers {
    repeated Peer items = 1;
}

